openshift-ai/gpu/04-clusterpolicy.yaml
apiVersion: nvidia.com/v1
kind: ClusterPolicy
metadata:
  name: gpu-cluster-policy
spec:
  operator:
    use_ocp_driver_toolkit: true
  cdi:
    enabled: true
    nriPluginEnabled: false
  sandboxWorkloads:
    enabled: false
    defaultWorkload: container
    mode: kubevirt
  driver:
    enabled: true
    useNvidiaDriverCRD: false
    kernelModuleType: auto
    upgradePolicy:
      autoUpgrade: true
      drain:
        deleteEmptyDir: false
        enable: false
        force: false
        timeoutSeconds: 300
      maxParallelUpgrades: 1
      maxUnavailable: "25%"
      podDeletion:
        deleteEmptyDir: false
        force: false
        timeoutSeconds: 300
      waitForCompletion:
        timeoutSeconds: 0
    repoConfig:
      configMapName: ""
    certConfig:
      name: ""
    licensingConfig:
      nlsEnabled: true
      secretName: ""
    virtualTopology:
      config: ""
    kernelModuleConfig:
      name: ""
  dcgmExporter:
    enabled: true
    config:
      name: ""
    serviceMonitor:
      enabled: true
  dcgm:
    enabled: true
  daemonsets:
    updateStrategy: RollingUpdate
    rollingUpdate:
      maxUnavailable: "1"
  devicePlugin:
    enabled: true
    config:
      name: ""
      default: ""
    mps:
      root: /run/nvidia/mps
  gfd:
    enabled: true
  migManager:
    enabled: true
  nodeStatusExporter:
    enabled: true
  mig:
    strategy: single
  toolkit:
    enabled: true
  validator:
    plugin:
      env: []
  vgpuManager:
    enabled: false
  vgpuDeviceManager:
    enabled: true
  sandboxDevicePlugin:
    enabled: true
  kataSandboxDevicePlugin:
    enabled: true
  vfioManager:
    enabled: true
  ccManager:
    enabled: true
  gds:
    enabled: false
  gdrcopy:
    enabled: false
